--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="splashScreen" style="position:fixed; top:0; left:0; width:100%; height:100%; background:linear-gradient(45deg, #FF6B6B, #4ECDC4); display:flex; flex-direction:column; justify-content:center; align-items:center; z-index:9999;">
+     <h1 style="font-size:3em; color:white; text-shadow:2px 2px 4px rgba(0,0,0,0.5);">🚨 SafeHer</h1>
+     <p style="color:white; font-size:1.2em;">Women Safety App</p>
+     <div style="width:60px; height:4px; background:white; border-radius:2px; margin:20px 0; animation:pulse 1.5s infinite;"></div>
+    </div>
+
     <div class="container">
         <!-- BACK BUTTON -->
         <button id="backBtn" class="back-btn" style="display:none;">🏠 Home</button>
@@ -19,6 +25,12 @@
             <button id="mapBtn" class="sos-button map-btn">🗺️ Safety Map</button>
             <button id="meshBtn" class="sos-button mesh-btn">📡 Offline SOS</button>
             <button id="policeBtn" class="sos-button police-btn">🚔 Police Help</button>
+            <button id="voiceBtn" class="sos-button" style="background: #9C27B0;">
+            🎤 Voice Mode (Say "Help")
+            </button>
+            <button id="fakeCallBtn" class="sos-button" style="background: #3F51B5;">
+                📞   Fake Call
+            </button>
         </div>
         
         <!-- PHASE 2: MAP SCREEN -->
@@ -41,6 +53,20 @@
             <div id="policeStatus"></div>
             <div id="policeTracking"></div>
             <div id="responseStats"></div>
+        </div>
+        <div id="fakeCallScreen" class="screen" style="display:none;">
+           <h3>📞 Incoming Call</h3>
+          <div id="fakeCallCard">
+          <div id="callerName">Papa</div>
+          <div id="callerLabel">Incoming call…</div>
+          <div id="callTimer">00:00</div>
+          <div id="callButtons">
+          <button id="rejectCall" class="call-btn reject">Decline</button>
+          <button id="acceptCall" class="call-btn accept">Accept</button>
+         </div>
+         <div id="loadingSpinner" style="display:none; text-align:center; margin:20px;">
+          <div style="border:3px solid #f3f3f3; border-top:3px solid #3F51B5; border-radius:50%; width:40px; height:40px; animation:spin 1s linear infinite; margin:0 auto;"></div>
+         <p>Activating Safety Mode...</p>
         </div>
     </div>
     <script src="script.js"></script>
